# s3client

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/rules/: backend.md  ci.md  frontend.md  general.md  wiki.md
.github/workflows/: ci.yml  publish.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  s3.rs  storage.rs
src/components/: Breadcrumbs.tsx  BucketList.tsx  ConnectionDialog.tsx  ConnectionSidebar.tsx  FilePreview.tsx  ObjectTable.tsx  Toolbar.tsx
src/components/ui/: checkbox.tsx  input.tsx  label.tsx  sonner.tsx  table.tsx
src/hooks/: useS3.ts
src/test/: utils.test.ts
wiki/: index.md  log.md  overview.md  release-setup.md  schema.md
wiki/architecture/: backend.md  ci-cd.md  frontend.md  ipc.md
wiki/concepts/: connections.md  s3-operations.md  theming.md
