[package]
name = "s3client"
version = "0.1.0"
edition = "2021"

[lib]
name = "s3client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
